metadata-classic/objects/becquerel_services__x.object
<CustomObject>
    <description>becquerel__services</description>
    <externalDataSource>Becquerel</externalDataSource>
    <externalName>becquerel__services</externalName>
    <fields>
        <fullName>Contact__c</fullName>
        <externalDeveloperName>sav_usr_user_id</externalDeveloperName>
        <label>Contact</label>
        <length>50</length>
        <referenceTargetField>Contact.usr_user_id__c</referenceTargetField>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>becquerel__services</relationshipLabel>
        <relationshipName>becquerel_services</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>sav_accept_related_categories__c</fullName>
        <defaultValue>false</defaultValue>
        <description>sav_accept_related_categories</description>
        <externalDeveloperName>sav_accept_related_categories</externalDeveloperName>
        <label>sav_accept_related_categories</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sav_available_service_id__c</fullName>
        <description>sav_available_service_id</description>
        <externalDeveloperName>sav_available_service_id</externalDeveloperName>
        <label>sav_available_service_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sav_available_service_pk__c</fullName>
        <description>sav_available_service_pk</description>
        <externalDeveloperName>sav_available_service_pk</externalDeveloperName>
        <label>sav_available_service_pk</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sav_bid_unread_count__c</fullName>
        <description>sav_bid_unread_count</description>
        <externalDeveloperName>sav_bid_unread_count</externalDeveloperName>
        <label>sav_bid_unread_count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sav_business_name__c</fullName>
        <description>sav_business_name</description>
        <externalDeveloperName>sav_business_name</externalDeveloperName>
        <label>sav_business_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sav_created_time__c</fullName>
        <description>sav_created_time</description>
        <externalDeveloperName>sav_created_time</externalDeveloperName>
        <label>sav_created_time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sav_description__c</fullName>
        <description>sav_description</description>
        <externalDeveloperName>sav_description</externalDeveloperName>
        <label>sav_description</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sav_employee_count__c</fullName>
        <description>sav_employee_count</description>
        <externalDeveloperName>sav_employee_count</externalDeveloperName>
        <label>sav_employee_count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sav_facebook_page_num_likes__c</fullName>
        <description>sav_facebook_page_num_likes</description>
        <externalDeveloperName>sav_facebook_page_num_likes</externalDeveloperName>
        <label>sav_facebook_page_num_likes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sav_founding_year__c</fullName>
        <description>sav_founding_year</description>
        <externalDeveloperName>sav_founding_year</externalDeveloperName>
        <label>sav_founding_year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sav_has_accepted_broad_matching__c</fullName>
        <defaultValue>false</defaultValue>
        <description>sav_has_accepted_broad_matching</description>
        <externalDeveloperName>sav_has_accepted_broad_matching</externalDeveloperName>
        <label>sav_has_accepted_broad_matching</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sav_is_activated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>sav_is_activated</description>
        <externalDeveloperName>sav_is_activated</externalDeveloperName>
        <label>sav_is_activated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sav_is_deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>sav_is_deleted</description>
        <externalDeveloperName>sav_is_deleted</externalDeveloperName>
        <label>sav_is_deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sav_is_eligible_for_landing_page__c</fullName>
        <defaultValue>false</defaultValue>
        <description>sav_is_eligible_for_landing_page</description>
        <externalDeveloperName>sav_is_eligible_for_landing_page</externalDeveloperName>
        <label>sav_is_eligible_for_landing_page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sav_is_enrolled_in_zip_code_preference__c</fullName>
        <defaultValue>false</defaultValue>
        <description>sav_is_enrolled_in_zip_code_preference</description>
        <externalDeveloperName>sav_is_enrolled_in_zip_code_preference</externalDeveloperName>
        <label>sav_is_enrolled_in_zip_code_preference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sav_is_top_pro__c</fullName>
        <defaultValue>false</defaultValue>
        <description>sav_is_top_pro</description>
        <externalDeveloperName>sav_is_top_pro</externalDeveloperName>
        <label>sav_is_top_pro</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sav_managed_account_status__c</fullName>
        <description>sav_managed_account_status</description>
        <externalDeveloperName>sav_managed_account_status</externalDeveloperName>
        <label>sav_managed_account_status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sav_notifications_phn_phone_number_id__c</fullName>
        <description>sav_notifications_phn_phone_number_id</description>
        <externalDeveloperName>sav_notifications_phn_phone_number_id</externalDeveloperName>
        <label>sav_notifications_phn_phone_number_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sav_num_bids__c</fullName>
        <description>sav_num_bids</description>
        <externalDeveloperName>sav_num_bids</externalDeveloperName>
        <label>sav_num_bids</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sav_num_hires__c</fullName>
        <description>sav_num_hires</description>
        <externalDeveloperName>sav_num_hires</externalDeveloperName>
        <label>sav_num_hires</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sav_num_yelp_reviews__c</fullName>
        <description>sav_num_yelp_reviews</description>
        <externalDeveloperName>sav_num_yelp_reviews</externalDeveloperName>
        <label>sav_num_yelp_reviews</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sav_phn_phone_number_id__c</fullName>
        <description>sav_phn_phone_number_id</description>
        <externalDeveloperName>sav_phn_phone_number_id</externalDeveloperName>
        <label>sav_phn_phone_number_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sav_price__c</fullName>
        <description>sav_price</description>
        <externalDeveloperName>sav_price</externalDeveloperName>
        <label>sav_price</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sav_price_max__c</fullName>
        <description>sav_price_max</description>
        <externalDeveloperName>sav_price_max</externalDeveloperName>
        <label>sav_price_max</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sav_pro_services_email__c</fullName>
        <description>sav_pro_services_email</description>
        <externalDeveloperName>sav_pro_services_email</externalDeveloperName>
        <label>sav_pro_services_email</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sav_title__c</fullName>
        <description>sav_title</description>
        <externalDeveloperName>sav_title</externalDeveloperName>
        <label>sav_title</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sav_travel_dist__c</fullName>
        <description>sav_travel_dist</description>
        <externalDeveloperName>sav_travel_dist</externalDeveloperName>
        <label>sav_travel_dist</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sav_travel_remote__c</fullName>
        <defaultValue>false</defaultValue>
        <description>sav_travel_remote</description>
        <externalDeveloperName>sav_travel_remote</externalDeveloperName>
        <label>sav_travel_remote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sav_travel_tocustomer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>sav_travel_tocustomer</description>
        <externalDeveloperName>sav_travel_tocustomer</externalDeveloperName>
        <label>sav_travel_tocustomer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sav_travel_toprovider__c</fullName>
        <defaultValue>false</defaultValue>
        <description>sav_travel_toprovider</description>
        <externalDeveloperName>sav_travel_toprovider</externalDeveloperName>
        <label>sav_travel_toprovider</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sav_user_license_status__c</fullName>
        <description>sav_user_license_status</description>
        <externalDeveloperName>sav_user_license_status</externalDeveloperName>
        <label>sav_user_license_status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sav_usr_user_id__c</fullName>
        <description>sav_usr_user_id</description>
        <externalDeveloperName>sav_usr_user_id</externalDeveloperName>
        <label>sav_usr_user_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>becquerel__services</label>
    <pluralLabel>becquerel__services</pluralLabel>
</CustomObject>